--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "socket.io": "^4.7.2"
   },
   "scripts": {
-    "dev-server": "nodemon server"
+    "dev-server": "nodemon server",
+    "server": "node server"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
